# CardGame

./: README.md
doc/: README.md
src/: card_player.py  cards_definition.py  game.py  pyproject.toml
src/CardGame/: __main__.py  card_player.py
src/CardGame/game_definition/: base.py  battle.py  pocker.py  tarot.py
src/CardGame/rules/: battle.py  pocker.py  tarot.py
src/game_definition/: base.py  battle.py  pocker.py  tarot.py
src/rules/: battle.py  pocker.py  tarot.py
