[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.scripts]
your_script_name = {executable = "CardGame.main_script:__main__.py"}

[project]
name = "CardGame"
version = "0.1.0"
description = "The CardGame project is a simulator of cards games"

